# jkit-code-plugin

./: .gitignore  AGENTS.md  MIGRATION-TODO.md  README.md  deploy.mjs  deploy.sh  eslint.config.mjs  eslint.config.mjs.bak  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
agents/: code-evaluator.md  code-generator.md  flutter-planner.md  flutter-tdd-guide.md
code-harness/: PLAN.md
commands/: check-conventions.md  code-evaluate.md  code-generate.md  code-harness.md  code-phases.md  code-plan.md  code-qa.md  code-slice.md  code-tasks.md  commit.md  flutter-android-keystore-info.md  flutter-android-signing-report.md  flutter-android-verify-apk.md  flutter-build-deploy.md  flutter-build-fix.md  flutter-code-review.md  flutter-init.md  flutter-keystore-info.md  flutter-plan.md  flutter-sync.md  flutter-tdd.md  flutter-test-coverage.md  flutter-update-architecture-lint-ref.md  flutter-update-dependencies.md  flutter-update-leaf-kit-ref.md  flutter-update-precommit.md  hello.md  init.md  nestjs-init.md  nestjs-sync.md  nextjs-init.md  nextjs-sync.md  update-code-plugin-ref.md  update-eslint-rules-ref.md  update-plugin-ref.md  update-pre-commit-config-ref.md  workspaces-init.md  workspaces-sync.md
hooks/: block-dangerous-commands.sh  block-destructive-git.sh  cleanup-old-versions.sh  enforce-commit-skill.sh  hooks.json
scripts/: check-i18n.mjs  common.mjs  common.sh  gen-agents.mjs  gen-agents.sh  gen-architecture.mjs  gen-architecture.sh  gen-commitlint.mjs  gen-git.sh  (+15 more)
(+419 files in other folders)
