[tool.poetry]
name = "jkit-code-plugin"
version = "0.1.0"
description = "JKit Code Plugin scripts"
authors = ["JosephNK <nkw0608@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ruamel-yaml = "^0.19.1"
jinja2 = "^3.1.6"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
